# shmtu-cas-demo-android

./: .gitignore  README.md  build.gradle  build.gradle.kts  download_lib.py  gradle.properties  settings.gradle  settings.gradle.kts
Resources/: shmtu_logo_black.eps
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/khm/shmtu/cas/captcha/: Captcha.kt  CaptchaAndroid.kt
app/src/main/java/com/khm/shmtu/cas/ocr/demo/: ImageUtils.kt  MainActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activate_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
demo/: build.gradle.kts
demo/src/main/java/com/khm/shmtu/cas/captcha/: CaptchaAndroid.kt
demo/src/main/java/com/khm/shmtu/cas/ocr/demo/: ImageUtils.kt  MainActivity.kt  ModelDownloader.kt
demo/src/main/res/layout/: activate_main.xml
demo/src/main/res/values/: ic_launcher_background.xml
gradle/wrapper/: gradle-wrapper.properties
shmtu_ocr/: build.gradle  build.gradle.kts  cleanup_ndk_cache.ps1  cleanup_ndk_cache.sh
shmtu_ocr/src/main/assets/: .gitignore
shmtu_ocr/src/main/cpp/: AndroidOpenCVUtils.cpp  AndroidOpenCVUtils.h  CAS_OCR.cpp  CAS_OCR.h  CAS_OCR_ANDROID.cpp  CAS_OCR_ANDROID.h  CMakeLists.txt  HandleImg.cpp  HandleImg.h  OpenCVTemplate.cpp  ncnn_jni.cpp
shmtu_ocr/src/main/java/com/khm/shmtu/cas/ocr/: SHMTU_NCNN.java  SHMTU_NCNN_Model.java
